<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Whatup from Foodo!</string>
    <string name="app_name">Foodo</string>
    <string name="no_rest">No restaurants found.</string>
    <string name="type_prompt">Choose a type</string>   
    <string name="menu_listview">List View</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_update">Update</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="see_restaurant">Get details?</string>
    <string name="no_reviews">No reviews for this restaurant yet.</string>
    <string name="no_user_reviews">No reviews to display</string>
    <string name="no_menu">No menu for this restaurant yet.</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="no_order">You haven't added anything to the order</string>
    <string name="your_order">Your Order</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="change_order">Change Order</string>
    <string name="empty_order">Empty Order</string>
    <string name="basket">Basket</string>
   	<string name="user_management">Settings</string>
   	<string name="name">Name:</string>
   	<string name="email">Email:</string>
   	<string name="edit_info">Edit info</string>
   	<string name="edit_password">Edit password</string>
   	<string name="view_old_orders">View old orders</string>
   	<string name="view_old_reviews">View old reviews</string>
   	<string name="user_name">User Name</string>
   	<string name="user_email">User Email</string>
   	<string name="number_of_orders">Orders:</string>
   	<string name="numberoforders">none</string>
   	<string name="number_of_reviews">Reviews:</string>
   	<string name="numberofreviews">none</string>
   	<string name="editinfo">Edit Info</string>
   	<string name="cancel">Cancel</string>
   	<string name="firstname">First name:</string>
   	<string name="lastname">Last name:</string>
   	<string name="enterpassword">Enter your current password to make changes:</string>
   	<string name="confirm_edit">Saved changes.</string>
   	<string name="unconfirm_edit">Could not save changes, try again.</string>
   	<string name="current_password">Enter your current password:</string>
   	<string name="new_password">Enter a new password:</string>
   	<string name="new_password_again">Enter your new password again:</string>
   	<string name="password_conflict">Your new password didn\'t match.</string>
   	<string name="old_orders">Old orders</string>
   	<string name="havent_ordered">You haven\'t ordered anything.</string>
   	<string name="order_made">Order made: </string>
   	<string name="total_amount">Total amount:</string>
   	<string name="review">Review:</string>
   	<string name="created">Created:</string>
   	<string name="reviews_title">Reviews</string>
   	<string name="use_this_order">Use this order</string>
   	<string name="yes">Yes</string>
   	<string name="no">No</string>
   	<string name="sure_send_this_order">Are you sure you want send this order?</string>
   	<string name="order_processed">Your order is being processed.</string>
   	<string name="select_all">Select all</string>
   	<string name="deselect_all">Deselect all</string>
   	<string name="restaurant_types">Restaurant types</string>
   	<string name="save">Save</string>
   	<string name="ok">OK</string>
   	<string name="no_wireless">No wireless connection found.</string>
   	<string name="need_internet">Woopsie! You need access to the internet to use this app.</string>
   	<string name="edit_review">Edit</string>
   	<string name="review_edited">Your review has been edited</string>
   	<string name="review_deleted">Your review has been deleted</string>
   	<string name="delete">Delete</string>
</resources>

