<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:orientation="vertical"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content">
		  <TextView
		  	android:text="@string/user_management"
		  	android:textSize="23dip"
		  	android:gravity="center"
		  	android:layout_width="fill_parent"
		  	android:layout_height="wrap_content"
		  	android:layout_marginTop="3dip"
		  	/>
	</LinearLayout>
	<View
	    android:layout_width="fill_parent"
    	android:layout_height="2px"
    	android:layout_marginTop="4px"
    	android:layout_marginBottom="6px"
	 	android:background="?android:attr/listDivider"
   	/> 
    <LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginBottom="6px"
	  >
		  <TextView
		  	android:text="@string/name"
		  	android:textSize="21dip"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
		  <TextView
		  	android:id="@+id/tUser_name"
		  	android:text="@string/user_name"
		  	android:textSize="20dip"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
	</LinearLayout>
	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginBottom="6px"
	  >
		  <TextView
		  	android:text="@string/email"
		  	android:textSize="21dip"		  	
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
		  <TextView
		  	android:id="@+id/tUser_email"
		  	android:text="@string/user_email"
		  	android:textSize="20dip"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
	</LinearLayout>
	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginBottom="6px"
	  >
		  <TextView
		  	android:text="@string/number_of_orders"
		  	android:textSize="21dip"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
		  <TextView
		  	android:id="@+id/tNumberOfOrders"
		  	android:text="@string/numberoforders"
		  	android:textSize="20dip"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
	</LinearLayout>
	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginBottom="6px"
	  >
		  <TextView
		  	android:text="@string/number_of_reviews"
		  	android:textSize="21dip"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
		  <TextView
		  	android:id="@+id/tNumberOfReviews"
		  	android:text="@string/numberofreviews"
		  	android:textSize="20dip"
		  	android:layout_width="wrap_content"
		  	android:layout_height="wrap_content"
		  	/>
	</LinearLayout>
	<View
	    android:layout_width="fill_parent"
    	android:layout_height="2px"
    	android:layout_marginTop="4px"
    	android:layout_marginBottom="6px"
	 	android:background="?android:attr/listDivider"
   	/>
   	<LinearLayout
	  xmlns:android="http://schemas.android.com/apk/res/android"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:layout_marginBottom="6px"
	  android:orientation="vertical"
	  >
	   <LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="horizontal"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:layout_marginBottom="6px"
		  >
			<Button
				android:id="@+id/bEditInfo"	
		   		android:layout_width="150dip"
		   		android:layout_height="wrap_content"
		   		android:text="@string/edit_info" 
		   		android:layout_marginTop="2px"
		   		android:layout_marginLeft="5px"/>
		   	<Button
				android:id="@+id/bEditPassword"	
		   		android:layout_width="150dip"
		   		android:layout_height="wrap_content"
		   		android:text="@string/edit_password" 
		   		android:layout_marginTop="2px"
		   		android:layout_marginLeft="10px"/>
		</LinearLayout>
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="horizontal"
		  android:layout_width="fill_parent"
		  android:layout_height="wrap_content"
		  android:layout_marginBottom="6px"
		  >
	    <Button
			android:id="@+id/bViewOldOrders"	
	   		android:layout_width="150dip"
	   		android:layout_height="wrap_content"
	   		android:text="@string/view_old_orders" 
	   		android:layout_marginTop="2px"
	   		android:layout_marginLeft="5px"/>
	    <Button
			android:id="@+id/bViewOldReviews"	
	   		android:layout_width="150dip"
	   		android:layout_height="wrap_content"
	   		android:text="@string/view_old_reviews" 
	   		android:layout_marginTop="2px"
	   		android:layout_marginLeft="10px"/>
	   	</LinearLayout>
	   	<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="horizontal"
		  android:layout_width="fill_parent"
		  android:gravity="center"
		  android:layout_height="wrap_content"
		  android:layout_marginBottom="6px"
		  >
	    <Button
			android:id="@+id/bLogout"	
	   		android:layout_width="150dip"
	   		android:layout_height="wrap_content"	   		
	   		android:text="@string/menu_logout" 
	   		android:layout_marginTop="2px"
	   		android:layout_marginLeft="5px"/>
	   	</LinearLayout>		
	</LinearLayout>
</LinearLayout>
