<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:orientation="vertical" 
	android:padding="5dip">

	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:orientation="vertical"		
		android:padding="0dip">
		
		<LinearLayout 
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="vertical"		
			android:padding="0dip">
			
			<TextView 
				android:text="@string/current_password"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" />
	
			<EditText 
				android:id="@+id/eCurrentPassword"
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:singleLine="true"
				android:password="true"/>
				
		</LinearLayout>

		<LinearLayout 
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="vertical"		
			android:padding="0dip">
			
			<TextView 
				android:text="@string/new_password"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" />
	
			<EditText 
				android:id="@+id/eNewPassword"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:singleLine="true" 
				android:password="true"/>
				
		</LinearLayout>
		
		<LinearLayout 
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:orientation="vertical"		
			android:padding="0dip">
			
			<TextView 
				android:text="@string/new_password_again"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" />
		
			<EditText 
				android:id="@+id/eNewPasswordAgain"
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:singleLine="true" 
				android:password="true"/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout 
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center" 
		android:orientation="horizontal">
		
		<Button 
			android:id="@+id/bEditNewPassword" 
			android:text="@string/edit_password"
			android:layout_width="110px" 
			android:layout_height="wrap_content" />
		<Button 
			android:id="@+id/bCancelEditPassword" 
			android:text="@string/cancel"
			android:layout_width="110px" 
			android:layout_height="wrap_content" />
	</LinearLayout>
</LinearLayout>
